DevPlayground: Overflow fix

--- a/src/Modules/DevPlayground/index.css
+++ b/src/Modules/DevPlayground/index.css
@@ -138,7 +138,9 @@ pre em {
 
   margin-bottom: -5px;
 
+  text-overflow: ellipsis;
   overflow: hidden;
+  white-space: nowrap;
 
   font-weight: bold;
   font-size: 20px;
@@ -151,7 +153,9 @@ pre em {
   margin-top: 10px;
   margin-bottom: -5px;
 
+  text-overflow: ellipsis;
   overflow: hidden;
+  white-space: nowrap;
 
   font-weight: bold;
   font-size: 16px;
@@ -161,7 +165,9 @@ pre em {
   height: 40px;
   line-height: 40px;
 
+  text-overflow: ellipsis;
   overflow: hidden;
+  white-space: nowrap;
 
   cursor: pointer;
   transition: 0.2s ease;
